# extrator-leads

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: leads_20251112_180822.csv  leads_20251112_193721.csv  leads_sobral.csv  leads_test.csv
extrator_leads/: cli.py
extrator_leads/core/: csv_exporter.py  extractor_factory.py  models.py
extrator_leads/extractors/: base.py  facebook.py  google_maps.py  linkedin.py
tests/: test_factory.py  test_models.py
